--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/Piyush-Keshri/TIF_Assignment#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "joi": "^17.10.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1"
