--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Piyush-Keshri/TIF_Assignment#readme",
   "dependencies": {
+    "@theinternetfolks/snowflake": "^1.3.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
